--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+spin = "0.9.4"
+lazy_static = { version = "1.4", features = ["spin_no_std"] }
+log = "0.4"
 
 [profile.release]
 debug = true
